; ModuleID = '/home/carl/AnghaBench/Cinder/src/glfw/src/extr_wl_window.c_unlockPointer.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glfw/src/extr_wl_window.c_unlockPointer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.zwp_locked_pointer_v1*, %struct.zwp_relative_pointer_v1* }
%struct.zwp_locked_pointer_v1 = type { i32 }
%struct.zwp_relative_pointer_v1 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*)* @unlockPointer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unlockPointer(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca %struct.zwp_relative_pointer_v1*, align 8
  %4 = alloca %struct.zwp_locked_pointer_v1*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 1
  %9 = load %struct.zwp_relative_pointer_v1*, %struct.zwp_relative_pointer_v1** %8, align 8
  store %struct.zwp_relative_pointer_v1* %9, %struct.zwp_relative_pointer_v1** %3, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load %struct.zwp_locked_pointer_v1*, %struct.zwp_locked_pointer_v1** %13, align 8
  store %struct.zwp_locked_pointer_v1* %14, %struct.zwp_locked_pointer_v1** %4, align 8
  %15 = load %struct.zwp_relative_pointer_v1*, %struct.zwp_relative_pointer_v1** %3, align 8
  %16 = call i32 @zwp_relative_pointer_v1_destroy(%struct.zwp_relative_pointer_v1* %15)
  %17 = load %struct.zwp_locked_pointer_v1*, %struct.zwp_locked_pointer_v1** %4, align 8
  %18 = call i32 @zwp_locked_pointer_v1_destroy(%struct.zwp_locked_pointer_v1* %17)
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 1
  store %struct.zwp_relative_pointer_v1* null, %struct.zwp_relative_pointer_v1** %22, align 8
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  store %struct.zwp_locked_pointer_v1* null, %struct.zwp_locked_pointer_v1** %26, align 8
  ret void
}

declare dso_local i32 @zwp_relative_pointer_v1_destroy(%struct.zwp_relative_pointer_v1*) #1

declare dso_local i32 @zwp_locked_pointer_v1_destroy(%struct.zwp_locked_pointer_v1*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
